--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,10 @@
-
-body {
-    font-family: 'Open Sans', sans-serif;
-    font-size: 22px;
-    color: rgb(53, 62, 70);
-    margin: 1%; /* 使用百分比设置外边距 */
-    padding: 1%; /* 使用百分比设置内边距 */
-    line-height: 1.7;
-    font-weight: 500;
-}
-
 header {
-    background-color: #333;
+    background-color: rgba(51, 51, 51, 0.8); /* #333 with 50% opacity */
     color: #fff;
     padding: 20px;
     text-align: center;
 }
+
 
 nav ul {
     list-style-type: none;
@@ -63,6 +53,16 @@ section {
     max-width: 100%; /* 让图片宽度随着容器宽度自适应 */
     height: auto; /* 让高度根据宽度自动调整 */
     margin-top: 2%;
+}
+
+body {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 22px;
+    color: rgb(53, 62, 70);
+    margin: 1%; /* 使用百分比设置外边距 */
+    padding: 1%; /* 使用百分比设置内边距 */
+    line-height: 1.7;
+    font-weight: 600;
 }
 
 footer {
