--- a/styles2.css
+++ b/styles2.css
@@ -2,9 +2,9 @@
 /*-- From Bootstrape，ThemeForest and error check from ChatGBT */
 
 body {
-    background-image: url('image/experience.jpeg'); /* 替换 'background.jpg' 为你想要的背景图片的路径 */
-    background-size: cover; /* 让背景图片铺满整个页面 */
-    background-position: center; /* 将背景图片居中显示 */
+    background-image: url('image/experience.jpeg'); 
+    background-size: cover; /* spread */
+    background-position: center; 
 }
 
 body {
@@ -12,6 +12,8 @@ body {
     background-size: cover;
     background-position: center;
 }
+
+/*-- From Bootstrape，ThemeForest and error check from ChatGBT */
 
 @keyframes fadeIn {
     from { opacity: 0; transform: translateY(20px); }
@@ -23,8 +25,6 @@ body {
     animation: fadeIn 1s ease-in-out forwards; /* Animation */
     animation-delay: calc(0.3s * var(--animation-order)); /* Delay based on order */
   }
-  
-  /* You'll need to add a custom data-attribute or style for each entry to control the animation order */
   
   .experience-entry:hover {
     color: #1a6675; /* Change text color */
@@ -38,7 +38,7 @@ body {
     width: 20px;
     height: 20px;
     position: absolute;
-    left: -30px; /* Adjust according to your layout */
+    left: -30px; /* Adjust according to layout */
     animation: pulse 2s infinite;
   }
   
@@ -49,7 +49,7 @@ body {
   }
   
   .experience-entry:hover .timeline-dot {
-    background-color: #1a6675; /* Change dot color on hover */
+    background-color: #1a6675; 
   }
   
   .accordion {
@@ -59,11 +59,11 @@ body {
   
   .accordion-content {
     max-height: 0; /* Start closed */
-    /* Add padding and other styles */
+
   }
   
   .accordion:hover .accordion-content {
-    max-height: 500px; /* Enough height to show all content */
+    max-height: 500px; 
   }
   
    /* Myself*/
@@ -79,7 +79,7 @@ body {
 }
 
 header {
-    background-color: rgba(51, 51, 51, 0.8); /* #333 with 50% opacity */
+    background-color: rgba(51, 51, 51, 0.8); 
     color: #fff;
     padding: 20px;
     text-align: center;
@@ -98,23 +98,17 @@ nav ul li {
 nav ul li a {
     color: #fff;
     text-decoration: none;
-    font-size: 24px; /* 调整导航链接字体大小 */
+    font-size: 24px; 
     transition: color 0.3s ease; /* 添加颜色变化的过渡效果 */
 }
 
 nav ul li a:hover {
-    color: #1a6675; /* 悬停时改变颜色 */
+    color: #1a6675; 
 }
 
 nav ul li a.active {
     color: #1a6675; /* 选择一个颜色来表示活动状态，这里使用的是亮绿色 */
     font-weight: bold; /* 可以加粗来突出显示 */
-}
-
-.experience {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 20px;
 }
 
 .experience-section {
@@ -164,4 +158,3 @@ footer {
       margin-bottom: 20px;
   }
 }
-
