--- a/styles1.css
+++ b/styles1.css
@@ -1,8 +1,8 @@
 
 body {
-  background-image: url('image/education.jpeg'); /* 替换 'background.jpg' 为你想要的背景图片的路径 */
-  background-size: cover; /* 让背景图片铺满整个页面 */
-  background-position: center; /* 将背景图片居中显示 */
+  background-image: url('image/education.jpeg'); 
+  background-size: cover; /* spread */
+  background-position: center; 
 }
 
 body {
@@ -24,7 +24,6 @@ body {
     animation-delay: calc(0.3s * var(--animation-order)); /* Delay based on order */
   }
   
-  
   .education-entry:hover {
     color: #1a6675; /* Change text color */
     transform: scale(1.05); /* Scale up */
@@ -37,7 +36,7 @@ body {
     width: 20px;
     height: 20px;
     position: absolute;
-    left: -30px; /* Adjust according to your layout */
+    left: -30px; /* Adjust according to layout */
     animation: pulse 2s infinite;
   }
   
@@ -48,7 +47,7 @@ body {
   }
   
   .education-entry:hover .timeline-dot {
-    background-color: #1a6675; /* Change dot color on hover */
+    background-color: #1a6675; 
   }
   
   .accordion {
@@ -58,11 +57,11 @@ body {
   
   .accordion-content {
     max-height: 0; /* Start closed */
-    /* Add padding and other styles */
+  
   }
   
   .accordion:hover .accordion-content {
-    max-height: 500px; /* Enough height to show all content */
+    max-height: 500px; 
   }
   
 
@@ -79,7 +78,7 @@ body {
 }
 
 header {
-    background-color: rgba(51, 51, 51, 0.8); /* #333 with 50% opacity */
+    background-color: rgba(51, 51, 51, 0.8); 
     color: #fff;
     padding: 20px;
     text-align: center;
@@ -98,12 +97,12 @@ nav ul li {
 nav ul li a {
     color: #fff;
     text-decoration: none;
-    font-size: 24px; /* 调整导航链接字体大小 */
+    font-size: 24px; 
     transition: color 0.3s ease; /* 添加颜色变化的过渡效果 */
 }
 
 nav ul li a:hover {
-    color: #1a6675; /* 悬停时改变颜色 */
+    color: #1a6675; 
 }
 
 nav ul li a.active {
@@ -139,14 +138,6 @@ nav ul li a.active {
     list-style-position: inside;
 }
 
-/* 为了响应式设计，在较小的屏幕上让项目垂直堆叠 */
-@media (max-width: 768px) {
-    .education-section {
-        grid-template-columns: 1fr;
-    }
-}
-
-
 footer {
     
     color: #585454;
@@ -158,7 +149,6 @@ footer {
     font-size: small;
     border: none; /* 移除边框 */
 }
-
 
 
 @media (max-width: 768px) {
