--- a/skills.css
+++ b/skills.css
@@ -1,7 +1,7 @@
 /* found this code from Bootstrape*/
 
 body {
-    background-image: url('image/skills.jpeg'); /* 替换 'background.jpg' 为你想要的背景图片的路径 */
+    background-image: url('image/skills.jpeg'); 
 
 }
 
